// Vitest Snapshot v1

exports[`Stack > should allow for gap prop 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "8px",
    }
  }
/>
`;

exports[`Stack > should allow for gap prop 2`] = `
<div
  style={
    {
      "columnGap": "8px",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should allow for gap prop 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "rowGap": "8px",
    }
  }
/>
`;

exports[`Stack > should allow overriding styles 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "32px",
    }
  }
/>
`;

exports[`Stack > should allow using style prop 1`] = `
<div
  style={
    {
      "color": "red",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should be polymorhic component 1`] = `
<main
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should be polymorhic component 2`] = `
<footer
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 2`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as inline 1`] = `
<div
  style={
    {
      "display": "inline-flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 2`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 4`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack with defaults 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;
